create page changes

--- a/Views/Author/Create.cshtml
+++ b/Views/Author/Create.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewBag.Title = "New Author";
 }
+<h1>This is author page</h1>
 <h1>@ViewBag.Title</h1>
 @using(Html.BeginForm()){
   <div class="form-group">
